Drag&drop of an object into a panel in the 3D view duplicates the object #73049

Closed
opened 2020-01-11 17:23:10 +01:00 by Olivier Lau · 9 comments

System Information
Operating system: Windows 10 64 bits
Graphics card: nvidia RTX 2080

Blender Version
Broken: 2.81a

Using an addon having a PointerProperty field targetting objects, doing a drag&drop of an objets from the Outliner into the PointerProperty field duplicates the object. See attached videos.

In the below video, drop is made on the Object field
b3d-dd-copy-v2.mp4

In the below video, drop is not made on the Object field but still on the panel.
b3d-dd-copy.mp4

**System Information** Operating system: Windows 10 64 bits Graphics card: nvidia RTX 2080 **Blender Version** Broken: 2.81a Using an addon having a PointerProperty field targetting objects, doing a drag&drop of an objets from the Outliner into the PointerProperty field duplicates the object. See attached videos. In the below video, drop is made on the Object field [b3d-dd-copy-v2.mp4](https://archive.blender.org/developer/F8269961/b3d-dd-copy-v2.mp4) In the below video, drop is not made on the Object field but still on the panel. [b3d-dd-copy.mp4](https://archive.blender.org/developer/F8269958/b3d-dd-copy.mp4)
Author

Added subscriber: @ilio

Added subscriber: @ilio
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member
  • Please attach a simple .blend file for easy reproduction if the issue.
  • Also, provide with a full screen screenshot to show active workspace, panels etc.
- Please attach a simple `.blend` file for easy reproduction if the issue. - Also, provide with a full screen screenshot to show active workspace, panels etc.
Author

The problem can be easily reproduced from the Blender startup state with the following steps:

  1. open Blender with default scene (Cube, Camera, light)
  2. Select the Camera in Outliner, type N to toggle the side panel
  3. In the side panel, go to the View tab and set the Use Local Camera checkbox to enable the Local Camera field. Clear the field with the cross icon if it is filled up
  4. Drag&Drop the Camera object onto the Local Camera field

Actual result: the Local Camera field is filled up with the Camera object and Camera object has been duplicated as Camera.001 in the Outliner and scene.

Expected result: the Local Camera field is filled up with the Camera object and there is no object duplication.

The problem can be easily reproduced from the Blender startup state with the following steps: 1. open Blender with default scene (Cube, Camera, light) 2. Select the Camera in Outliner, type N to toggle the side panel 3. In the side panel, go to the View tab and set the Use Local Camera checkbox to enable the Local Camera field. Clear the field with the cross icon if it is filled up 4. Drag&Drop the Camera object onto the Local Camera field **Actual result**: the Local Camera field is filled up with the Camera object and Camera object has been duplicated as Camera.001 in the Outliner and scene. **Expected result**: the Local Camera field is filled up with the Camera object and there is no object duplication.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

This bug does not seem to have anything to do with PointerProperty. The bug is that when you drop an object on a panel in the 3d view, it will also drop the object in the 3d view itself (which creates a copy as intended).

This bug does not seem to have anything to do with `PointerProperty`. The bug is that when you drop an object on a panel in the 3d view, it will also drop the object in the 3d view itself (which creates a copy as intended).
Jacques Lucke changed title from Drag&drop of an object into a panel's PointerProperty Object field duplicates the object to Drag&drop of an object into a panel in the 3D view duplicates the object 2020-03-04 15:26:49 +01:00

This issue was referenced by 649fdc7938

This issue was referenced by 649fdc793851a214f54c9ecdaae4c120c4bd11c9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-03-12 19:38:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73049
No description provided.