Fix T73049: Drag & drop on overlapping panels behaves incorrectly

Reviewers: brecht, Severin

Differential Revision: https://developer.blender.org/D7024